--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="scanned_items">Список отсканированных элементов</string>
     <string name="scan_qr">Сканировать QR</string>
     <string name="scan_qr_desc">Кнопка для запуска сканера QR-кодов</string>
+    <string name="splash_screen_logo">QRScanner</string>
 </resources>
